<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/login_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginToolbar"
                    android:layout_gravity="center"
                    android:id="@+id/toolbar_title"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

            </android.support.v7.widget.Toolbar>


            <!-- ALL THE LOGIN -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="50dp"
                android:layout_below="@id/login_toolbar"
                android:orientation="vertical">

                <!-- ENTER USERNAME -->
                    <EditText
                        android:id="@+id/loginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/email"/>

                <!-- ENTER PASSWORD -->
                    <EditText
                        android:id="@+id/loginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/passWord"/>

                <!-- BUTTON FOR START THE LOGIN -->
                <android.support.v7.widget.ButtonBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/btLogin"
                        android:theme="@style/AppTheme.Button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btLogIn"/>

                </android.support.v7.widget.ButtonBarLayout>

                <!-- BUTTON FOR CHANGE TO THE REGISTER LAYOUT -->
                <android.support.v7.widget.ButtonBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp">

                    <Button
                        android:id="@+id/btnLinkToRegisterScreen"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/btn_link_to_register"
                        android:textAllCaps="false"
                        android:textSize="15dp"
                        android:textColor="#3f51b5"/>

                </android.support.v7.widget.ButtonBarLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.DrawerLayout>


</RelativeLayout>

